tests/parser/tests/cases/should_fail/expresionless_directive/case.stderr
error: Failed to parse
 --> $DIR/case.hash:2:11
1 |   // This directive does not have an expression
2 |   k := #dump;
  |             ^ here
  = note: Expected an expression, however received a `;`.
